--- a/src/Serilog.Sinks.AzureQueueStorage/Serilog.Sinks.AzureQueueStorage.csproj
+++ b/src/Serilog.Sinks.AzureQueueStorage/Serilog.Sinks.AzureQueueStorage.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net461;netcoreapp2.1</TargetFrameworks>
+    <TargetFramework>netcoreapp2.1</TargetFramework>
     <Description>Logs messages to an Azure storage queue</Description>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <PackageProjectUrl>https://github.com/gjbdebug/serilog-sinks-azurequeuestorage</PackageProjectUrl>
