--- a/.github/workflows/nuget.yml
+++ b/.github/workflows/nuget.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Build
-        run: dotnet build --configuration Release "Serilog.Sinks.AzureQueueStorage.sln"
+        run: dotnet build --configuration Release src/Serilog.Sinks.AzureQueueStorage/Serilog.Sinks.AzureQueueStorage.csproj /p:Version=${GITHUB_REF#refs/tags/}
         
       - name: Create the package
         run: dotnet pack --configuration Release --no-build src/Serilog.Sinks.AzureQueueStorage/Serilog.Sinks.AzureQueueStorage.csproj /p:Version=${GITHUB_REF#refs/tags/}
